corrections to conflict in styles which causes the wrong alignment in the edit tags display

--- a/public/stylesheets/fb.css
+++ b/public/stylesheets/fb.css
@@ -1042,7 +1042,7 @@ div#face_tag label{
 	height:10px;
 
 }
-table#edit_tags_wrappper{
+table#fb_edit_tags_wrappper{
 	width:670px;
 	margin-left:65px;
 }
